[package]
name = "funk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytemuck = { version = "1.14.3", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
